# phidata

./: .dockerignore  .editorconfig  .gitignore  .pre-commit-config.yaml  00.phidata notebook 區塊庫.ipynb  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  LICENSE.md  Makefile  OSKAR.md  README.md  add_tools_instructions.txt  agents.db  agno.code-workspace  assignment week 8.sql  calculate_average_movie_rating.py  calculate_average_rating.py  data.db  memory.db  news_article.md  phibase_ai.py  pyproject.toml  requirements.txt  sonar-project.properties  ss_conversation.py  update.bat  可以使用的大模型.txt
agent-app/: .dockerignore  .gitignore  Dockerfile  README.md  example.env  pyproject.toml  requirements.txt
agent-app/.github/workflows/: docker-images.yml  ecr-images.yml  validate.yml
agent-app/agents/: example.py  settings.py
agent-app/agents/test/: example_agent.py
agent-app/api/: main.py  settings.py
agent-app/api/routes/: health.py  playground.py  v1_router.py
agent-app/app/: Home.py
agent-app/db/: README.md  alembic.ini  session.py  settings.py
agent-app/db/tables/: __init__.py  base.py
agent-app/scripts/: _utils.sh  auth_ecr.sh  build_dev_image.sh  build_prd_image.sh  entrypoint.sh
agent-app/tests/evals/: test_haiku.py
agent-app/utils/: dttm.py  log.py
agent-app/workspace/: .gitignore  dev_resources.py  prd_resources.py  settings.py
agent-app/workspace/example_secrets/: dev_app_secrets.yml  prd_app_secrets.yml  prd_db_secrets.yml
libs/agno/: LICENSE  pyproject.toml  requirements.txt
libs/agno/agno/: constants.py  debug.py  exceptions.py  media.py
libs/agno/agno/agent/: __init__.py  agent.py  duckdb.py  media.py  metrics.py  python.py  reason.py  respond.py  session.py  step.py  task.py
libs/agno/agno/api/: agent.py  api.py  playground.py  routes.py  team.py  user.py  workspace.py
libs/agno/agno/app/: base.py  context.py  db_app.py  group.py
libs/agno/agno/cli/: auth_server.py  config.py  console.py  credentials.py  entrypoint.py  operator.py  settings.py
libs/agno/agno/document/: __init__.py  base.py
libs/agno/agno/embedder/: __init__.py  azure_openai.py  base.py  cohere.py  fastembed.py  fireworks.py  google.py  huggingface.py  mistral.py  ollama.py  openai.py  sentence_transformer.py  together.py  voyageai.py
libs/agno/agno/eval/: __init__.py  accuracy.py  eval.py  memory_coherence_and_retrieval.py  perf.py  reliability.py  tool_utilisation.py
libs/agno/agno/file/: __init__.py  file.py
libs/agno/agno/infra/: app.py  base.py  context.py  db_app.py  resource.py  resources.py  tbd_resource_group.py
libs/agno/agno/knowledge/: __init__.py  agent.py  arxiv.py  base.py  combined.py  csv.py  csv_url.py  document.py  docx.py  json.py  langchain.py  llamaindex.py  pdf.py  pdf_url.py  text.py  url.py  website.py  wikipedia.py  youtube.py
libs/agno/agno/memory/: __init__.py  agent.py  classifier.py  manager.py  memory.py  row.py  summarizer.py  summary.py  workflow.py
libs/agno/agno/model/: base.py  content.py  message.py
libs/agno/agno/models/: base.py  content.py  defaults.py  message.py  response.py
libs/agno/scripts/: format.sh  generate_requirements.sh  release_manual.sh  test.sh  upgrade.sh  validate.sh
libs/infra/agno_docker/: pyproject.toml
test-spark/: .dockerignore  .gitignore  .pre-commit-config.yaml  README.md  example.env  pyproject.toml  requirements.txt
test-spark/.github/workflows/: dev-docker-images.yml  dev-ecr-images.yml  prd-docker-images.yml  prd-ecr-images.yml  run-tests.yml
test-spark/notebooks/: .gitignore
test-spark/notebooks/examples/: crypto_nb.ipynb  crypto_prices.ipynb  hello_world.ipynb  spark_test.ipynb
test-spark/scripts/: _utils.sh  install.sh  setup_venv.sh  upgrade.sh  validate.sh
test-spark/tests/: test_true.py
test-spark/workflows/: buckets.py  env.py  sql_dbs.py
test-spark/workflows/crypto/: prices.py  prices_aws.py  readme.md
test-spark/workflows/dags/: distributed_dag.py  simple_dag.py
test-spark/workflows/notebooks/: notebooks_daily.py
test-spark/workspace/: .gitignore  config.py  settings.py
test-spark/workspace/dev/: assistant.py  aws_config.py  aws_resources.py  databox.py  docker_config.py  postgres.py  spark.py  traefik.py
test-spark/workspace/example_secrets/: dev_airflow_secrets.yml  dev_jupyter_secrets.yml  dev_superset_secrets.yml  prd_airflow_db_secrets.yml  prd_airflow_secrets.yml  prd_jupyter_secrets.yml  prd_postgres_secrets.yml  prd_superset_db_secrets.yml  prd_superset_secrets.yml  prd_traefik_secrets.yml
test-spark/workspace/k8s/: whoami.py
test-spark/workspace/prd/: assistant.py  aws_config.py  aws_resources.py  databox.py  docker_config.py  k8s_config.py  postgres.py  traefik.py
workspace-1/: .dockerignore  .gitignore  Dockerfile  README.md  example.env  pyproject.toml  requirements.txt
workspace-1/.github/workflows/: docker-images.yml  ecr-images.yml  validate.yml
workspace-1/ai/: knowledge_base.py  settings.py  storage.py
workspace-1/ai/assistants/: image.py  pdf_auto.py  pdf_rag.py  website_auto.py  website_rag.py
workspace-1/ai/test/: assistant.py  image.py  pdf_auto.py  pdf_rag.py  website_auto.py  website_rag.py
workspace-1/api/: settings.py
workspace-1/api/routes/: assistants.py  endpoints.py  status.py  v1_router.py
workspace-1/app/: Home.py
workspace-1/app/pages/: 1_PDF_Assistant.py  2_Image_Assistant.py  3_Website_Assistant.py
workspace-1/db/: README.md  session.py
workspace-1/db/migrations/: env.py
workspace-1/notebooks/: auto_pdf_conversation.ipynb  basics.ipynb  multimodal.ipynb  rag_pdf_conversation.ipynb
workspace-1/scripts/: auth_ecr.sh  build_dev_image.sh  build_jupyter_image.sh  build_prd_image.sh  create_venv.sh  entrypoint.sh  format.sh  install.sh  upgrade.sh  validate.sh
workspace-1/utils/: dttm.py  log.py
workspace-1/workspace/: dev_resources.py  prd_resources.py  settings.py
workspace-1/workspace/example_secrets/: dev_app_secrets.yml  dev_jupyter_secrets.yml  prd_app_secrets.yml  prd_db_secrets.yml
workspace-1/workspace/jupyter/: Dockerfile  lab.py
(+4680 files in other folders)
