[project]
name = "phidata"
version = "2.5.0a13"
description = "Build AI Agents with memory, knowledge and tools."
requires-python = ">=3.7"
readme = "README.md"
authors = [
  {name = "Ashpreet Bedi", email = "ashpreet@phidata.com"}
]

dependencies = [
  "gitpython",
  "httpx",
  "pydantic",
  "pydantic-settings",
  "python-dotenv",
  "pyyaml",
  "rich",
  "tomli",
  "typer",
  "typing-extensions",
]

[project.optional-dependencies]
dev = [
    "mypy",
    "pytest",
    "ruff",
    "types-pyyaml",
    "timeout-decorator",
]
docker = [
    "docker"
]
aws = [
    "docker",
    "boto3"
]
k8s = [
    "docker",
    "kubernetes"
]
server = [
    "fastapi",
    "uvicorn",
]
all = [
    "mypy",
    "pytest",
    "ruff",
    "types-pyyaml",
    "docker",
    "boto3",
    "kubernetes",
    "fastapi",
    "uvicorn",
]

[project.scripts]
phi = "phi.cli.entrypoint:phi_cli"

[project.urls]
homepage = "https://phidata.com"
documentation = "https://docs.phidata.com"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["phi*"]

[tool.setuptools.package-data]
phi = ["py.typed"]

[tool.pytest.ini_options]
log_cli = true
testpaths = "tests"

[tool.ruff]
line-length = 120
exclude = ["phienv*", "aienv*"]
# Ignore `F401` (import violations) in all `__init__.py` files
[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"phi/k8s/app/traefik/crds.py" = ["E501"]

[tool.mypy]
check_untyped_defs = true
no_implicit_optional = true
warn_unused_configs = true
plugins = ["pydantic.mypy"]
exclude = ["phienv*", "aienv*", "scratch*", "wip*", "tmp*", "cookbook/assistants/examples/*", "phi/assistant/openai/*"]

[[tool.mypy.overrides]]
module = [
  "altair.*",
  "anthropic.*",
  "apify_client.*",
  "arxiv.*",
  "boto3.*",
  "botocore.*",
  "bs4.*",
  "chromadb.*",
  "clip.*",
  "cohere.*",
  "clip.*",
  "crawl4ai.*",
  "docker.*",
  "docx.*",
  "duckdb.*",
  "duckduckgo_search.*",
  "exa_py.*",
  "fastapi.*",
  "firecrawl.*",
  "google.*",
  "googlesearch.*",
  "groq.*",
  "huggingface_hub.*",
  "kubernetes.*",
  "lancedb.*",
  "langchain.*",
  "langchain_core.*",
  "llama_index.*",
  "mistralai.*",
  "nest_asyncio.*",
  "newspaper.*",
  "numpy.*",
  "ollama.*",
  "openai.*",
  "openbb.*",
  "pandas.*",
  "pgvector.*",
  "pinecone.*",
  "pinecone_text.*",
  "PIL.*",
  "psycopg.*",
  "psycopg2.*",
  "pyarrow.*",
  "pycountry.*",
  "pypdf.*",
  "qdrant_client.*",
  "rapidocr_onnxruntime.*",
  "requests.*",
  "serpapi.*",
  "setuptools.*",
  "sentence_transformers.*",
  "simplejson.*",
  "spider.*",
  "sqlalchemy.*",
  "starlette.*",
  "streamlit.*",
  "tavily.*",
  "tantivy.*",
  "textract.*",
  "torch.*",
  "timeout_decorator.*",
  "vertexai.*",
  "voyageai.*",
  "wikipedia.*",
  "uvicorn.*",
  "yfinance.*",
  "youtube_transcript_api.*",
]
ignore_missing_imports = true
