[project]
name = "data-platform"
version = "0.1.0"
requires-python = ">3.7"
readme = "README.md"
authors = [
  {name = "Data Team", email = "data@team.com"}
]

dependencies = [
  # Formatting
  "black",
  # Type checking
  "mypy",
  # Pre-commit hooks
  "pre-commit",
  # Testing
  "pytest",
  # Linting
  "ruff",
  "phidata==1.4.3",
  # Dataframe libraries
  "pandas",
  "polars",
  # Pyspark libraries
  "pyspark",
  # Sql libraries
  # "sqlmodel",
  # Postgres libraries
  # "psycopg2-binary",
  # AWS libraries
  # "awswrangler",
  # Other libraries
  "httpx",
  # For Airflow 2.5.0 compatibility
  "pathspec~=0.9.0",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["workflows", "workspace", "notebooks"]

# Exclude secrets from the package
# https://setuptools.pypa.io/en/latest/userguide/datafiles.html#exclude-package-data
[tool.setuptools.exclude-package-data]
workspace = ["secrets"]

# Update this value if the workspace directory is renamed.
# [tool.phidata]
# workspace = "workspace"

[tool.ruff]
line-length = 110
exclude = [
  ".venv*",
  "workspace/dev/airflow/resources/*",
  "workspace/prd/airflow/resources/*",
  "workspace/dev/databox/resources/*",
  "workspace/prd/databox/resources/*",
  "workspace/dev/superset/resources/*",
  "workspace/prd/superset/resources/*",
  "workspace/dev/jupyter/resources/*",
  "workspace/prd/jupyter/resources/*",
]

[tool.mypy]
pretty = true
check_untyped_defs = true
no_implicit_optional = true
warn_unused_configs = true
exclude = [
  ".venv*",
  "workspace/dev/airflow/resources/*",
  "workspace/prd/airflow/resources/*",
  "workspace/dev/databox/resources/*",
  "workspace/prd/databox/resources/*",
  "workspace/dev/superset/resources/*",
  "workspace/prd/superset/resources/*",
  "workspace/dev/jupyter/resources/*",
  "workspace/prd/jupyter/resources/*",
]

[[tool.mypy.overrides]]
module = [
  "airflow.*",
  "phidata.*",
  "pyarrow.*",
  "setuptools.*",
]
ignore_missing_imports = true
